# OMX_WS

./: .gitignore  CLAUDE.md  WORKLOG.md  goto_xyz.py  moveit_obstacle_demo.py  moveit_target_omx.py  pick_place_demo.py  pyproject.toml  teleop_wasd.py  vision_calib.json  vision_calibrate.py  vision_env.py  vision_pick.py
install/: local_setup.sh  setup.sh
install/dynamixel_hardware_interface/include/dynamixel_hardware_interface/: dynamixel_hardware_interface.hpp  visibility_control.h
install/dynamixel_hardware_interface/share/dynamixel_hardware_interface/: dynamixel_hardware_interface_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_interfaces/share/dynamixel_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/include/dynamixel_easy_sdk/: connector.hpp  control_table.hpp  data_types.hpp  dynamixel_easy_sdk.hpp  dynamixel_error.hpp  group_executor.hpp  motor.hpp
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
(+761 files in other folders)
